--- a/campus-modular/src/main/resources/application.yml
+++ b/campus-modular/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
   #数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/campus_imaotai?characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/imaotai?characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: 123456789
+    password: root
   #redis配置
   redis:
     host: 127.0.0.1
