--- a/campus-modular/src/main/resources/application-prod.yml
+++ b/campus-modular/src/main/resources/application-prod.yml
@@ -2,12 +2,12 @@ spring:
   #数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://campus-mysql:3306/campus_imaotai?characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://192.168.1.88:3306/imaotai?characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: oddfar_imaotai
+    password: root
   #redis配置
   redis:
-    host: campus-redis
+    host: 192.168.1.88
     port: 6379
     database: 0
     timeout: 1800000
@@ -18,7 +18,6 @@ spring:
         max-wait: -1
         max-idle: 5
         min-idle: 0
-    password: oddfar_imaotai
 
 #mybatis-plus配置
 mybatis-plus:
