--- a/campus-modular/src/main/resources/application.yml
+++ b/campus-modular/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   application:
     name: oddfar
   profiles:
-    active: dev
+    active: prod
   #数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
